# claude-code-base

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  justfile
.claude/: DEVELOPMENT_LOG.md  FAILED_ATTEMPTS.md  SESSION_KNOWLEDGE.md  config.yaml  mcp.json.example  settings.json  settings.local.json.example
.claude/commands/: README.md  actions-status.md  api-contract.md  codespace-create.md  data-model.md  end.md  git-branch.md  git-commit.md  git-diff.md  git-sync.md  harness-init.md  harness-next.md  harness-setup.md  harness-status.md  issue-create.md  new-project.md  next.md  pr-create.md  pr-review.md  project-create.md  project-wizard.md  prp-debug.md  prp-issue-fix.md  prp-issue-investigate.md  prp-review.md  save.md  spark-prototype.md  spark-teach.md  start.md  status.md  sync.md  task.md  technology-research.md  user-story.md  worktree-experiment.md  worktree-feature.md  worktree-review.md
.claude/skills/: README.md
.devcontainer/: devcontainer.json
.devcontainer/backend-api/: devcontainer.json
.devcontainer/data-science/: devcontainer.json
.devcontainer/dotnet/: devcontainer.json
.devcontainer/go/: devcontainer.json
.devcontainer/rust/: devcontainer.json
.devcontainer/web-frontend/: devcontainer.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  security-scan.yml
docs/: FAQ.md  STYLE_GUIDE.md  architecture.md  claude-code-customization.md  contributing.md  deployment.md  getting-started.md  index.md  mcp-dependencies.md  migration-guide.md  quick-reference.md  troubleshooting.md  video-tutorials.md
docs/guides/: codespaces-workflow.md  crawl4ai-guide.md  project-wizard-guide.md  spark-workflow.md  worktrees-workflow.md
docs/mcp-servers/: crawl4ai-setup.md  index.md
mcp-servers/crawl4ai-rag/: .env.example  .gitignore  Dockerfile  README.md  mcp-config.json  neo4j_setup.cypher  pyproject.toml  supabase_setup.sql
mcp-servers/crawl4ai-rag/src/: __init__.py  crawl4ai_mcp_server.py
mcp-servers/crawl4ai-rag/tests/: __init__.py  test_server.py
scripts/: deploy-skills.ps1  install-mcp-servers.ps1  setup-claude-code-project.ps1  stats.ps1  sync-claude-code.ps1  update-project.ps1  validate-claude-code.ps1
specs/: example-specification.md
templates/: manifest.json  plugin-skill-map.json
templates/claude-md/: CLAUDE.md.template
templates/enterprise/: audit-checklist.md  governance-policy.md  org-instructions.md  team-instructions.md
templates/gitignore/: dotnet.gitignore  go.gitignore  java.gitignore  node.gitignore  power-platform.gitignore  python.gitignore
templates/readme/: backend-api.md  cli-library.md  fullstack.md  infrastructure.md  power-platform.md  web-frontend.md
templates/wizard/: archon-wizard-state.md  harness-config-template.json  (+2 more)
tests/: test-skills.ps1  test-template.ps1
(+75 files in other folders)
